# php-to-fastapi

./: .gitignore  Makefile  README.md  __init__.py  cli.py  log.md  main.py  requirements-dev.txt  requirements.txt  setup.py  test_gemini_config.py
analyzers/: __init__.py  api_extractor.py  database_analyzer.py  php_parser.py  structure_analyzer.py
config/: init.py  prompts.py  settings.py
core/: __init__.py  detector.py  llm_client.py  orchestrator.py  user_interface.py
fastapi_output/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
fastapi_output/app/: __init__.py
fastapi_output/app/api/: dependencies.py
fastapi_output/app/api/v1/: __init__.py  api.py
fastapi_output/app/api/v1/endpoints/: __init__.py  auth.py  example.py  items.py
fastapi_output/app/core/: __init__.py  config.py  security.py
fastapi_output/app/db/: __init__.py  base.py  database.py
fastapi_output/app/models/: __init__.py  example.py  models.py
fastapi_output/app/schemas/: __init__.py  auth.py  item.py
fastapi_output/app/services/: __init__.py  item_service.py
fastapi_output/tests/: conftest.py  test_api.py
generators/: __init__.py  auth_converter.py  business_logic_translator.py  code_batch_processor.py  config_generator.py  endpoint_converter.py  fastapi_generator.py  llm_assisted_generator.py  model_generator.py  project_assembler.py  route_generator.py  schema_generator.py  shared.py
mermaid/: analyzer_detail.md  analyzer_detail.mermaid  (+8 more)
(+32 files in other folders)
